--- a/.github/workflows/publish-container-images.yml
+++ b/.github/workflows/publish-container-images.yml
@@ -26,7 +26,9 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Build and push Docker image
-      run: |
-        echo $GITHUB_TOKEN | docker login ghcr.io -u ${{ env.USERNAME }} --password-stdin
-        docker tag IMAGE_ID ghcr.io/${{ env.IMAGE_NAME }}:latest
-        docker push ghcr.io/OWNER/${{ env.IMAGE_NAME }}:latest
+      uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+      with:
+        context: sample-packages/docker/.
+        push: true
+        tags: ${{ env.IMAGE_NAME }}:lateat
+
