--- a/.github/workflows/publish-container-images.yml
+++ b/.github/workflows/publish-container-images.yml
@@ -26,9 +26,9 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Build and push Docker image
-      uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+      uses: docker/build-push-action@v5
       with:
         context: sample-packages/docker/.
         push: true
-        tags: ${{ env.IMAGE_NAME }}:lateat
+        tags: ${{ env.IMAGE_NAME }}:latest
 
